documentacion/obtenida/ARINC 429/driver and software/LX429-3/API/L43W32NET.CS


        [DllImport("L43W32.DLL", EntryPoint = "_L43_BCDGetData@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_BCDGetData(UInt32 msg, UInt16 msb, UInt16 lsb);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BCDGetMant@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_BCDGetMant(UInt32 msg, UInt16 sigdig);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BCDGetSign@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_BCDGetSign(UInt32 msg);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BCDGetSSM@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_BCDGetSSM(UInt32 msg);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BCDGetVal@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_BCDGetVal(ref string buf, UInt32 msg, UInt16 sigdig, ref string resolstr);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BCDPutData@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_BCDPutData(UInt32 msg, UInt32 value, UInt16 msb, UInt16 lsb);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BCDPutMant@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_BCDPutMant(UInt32 msg, UInt32 value, UInt16 sigdig, UInt16 sign);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BCDPutSign@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_BCDPutSign(UInt32 msg, UInt16 sign);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BCDPutSSM@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_BCDPutSSM(UInt32 msg, UInt16 value);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BCDPutVal@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_BCDPutVal(ref string buf, UInt32 msg, UInt16 sigdig, ref string resolstr);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BNRGetData@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_BNRGetData(UInt32 msg, UInt16 msb, UInt16 lsb);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BNRGetMant@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_BNRGetMant(UInt32 msg, UInt16 sigbit);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BNRGetSign@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_BNRGetSign(UInt32 msg);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BNRGetSSM@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_BNRGetSSM(UInt32 msg);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BNRGetVal@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_BNRGetVal(ref string buf, UInt32 msg, UInt16 sigbit, ref string resolstr);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BNRPutData@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_BNRPutData(UInt32 msg, UInt32 value, UInt16 msb, UInt16 lsb);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BNRPutMant@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_BNRPutMant(UInt32 msg, UInt32 value, UInt16 sigbit, UInt16 twos);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BNRPutSign@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_BNRPutSign(UInt32 msg, UInt16 twos);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BNRPutSSM@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_BNRPutSSM(UInt32 msg, UInt16 value);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BNRPutVal@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_BNRPutVal(ref string buf, UInt32 msg, UInt16 sigbit, ref string resolstr);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BrdNumRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_BrdNumRd(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_BrdNumWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_BrdNumWr(UInt16 brdnum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CardClose@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CardClose(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CardOpen@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_CardOpen(Int32 cardnum);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CardReset@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_CardReset(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CardResume@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CardResume(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CardStart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CardStart(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CardStop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_CardStop(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_CardTrigger@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_CardTrigger(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ChClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_ChClear(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ChConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_ChConfig(UInt32 configval, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ChPause@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_ChPause(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ChPauseCheck@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_ChPauseCheck(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ChResume@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_ChResume(Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ExtDinRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_ExtDinRd(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ExtDinWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_ExtDinWr(Int32 dinval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ExtDIORd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_ExtDIORd(Int32 dionum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ExtDIOWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_ExtDIOWr(Int32 dionum, Int32 dioval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ExtLEDRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_ExtLEDRd(UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_ExtLEDWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L43_ExtLEDWr(Int32 ledval, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FilterClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_FilterClear(UInt32 basevaladdr, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FilterDefault@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_FilterDefault(UInt32 configval, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FilterRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_FilterRd(Int32 labelval, Int32 sdival, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FilterSet@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_FilterSet(UInt32 configval, Int32 labelval, Int32 sdimask, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FilterWr@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L43_FilterWr(UInt32 msgaddr, Int32 labelval, Int32 sdival, Int32 channum, UInt32 handleval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FldGetData@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_FldGetData(UInt32 msgval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FldGetLabel@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_FldGetLabel(UInt32 msgval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FldGetParity@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_FldGetParity(UInt32 msgval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FldGetSDI@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L43_FldGetSDI(UInt32 msgval);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FldGetValue@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_FldGetValue(UInt32 msgval, UInt16 startbit, UInt16 endbit);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FldPutData@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_FldPutData(UInt32 msgval, UInt32 data);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FldPutLabel@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_FldPutLabel(UInt32 msgval, UInt16 label);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FldPutSDI@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_FldPutSDI(UInt32 msgval, UInt16 sdi);
        [DllImport("L43W32.DLL", EntryPoint = "_L43_FldPutValue@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L43_FldPutValue(UInt32 msgval, UInt32 dataval, UInt16 startbit, UInt16 endbit);
